// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/pip_requirements/extract extractPackageFile() extracts dependencies 1`] = `
Array [
  Object {
    "currentValue": "==0.3.1",
    "datasource": "pypi",
    "depName": "some-package",
    "lineNumber": 2,
    "registryUrls": Array [
      "http://example.com/private-pypi/",
    ],
  },
  Object {
    "currentValue": "==1.0.0",
    "datasource": "pypi",
    "depName": "some-other-package",
    "lineNumber": 3,
    "registryUrls": Array [
      "http://example.com/private-pypi/",
    ],
  },
  Object {
    "currentValue": "==1.9",
    "datasource": "pypi",
    "depName": "not_semver",
    "lineNumber": 4,
    "registryUrls": Array [
      "http://example.com/private-pypi/",
    ],
  },
]
`;

exports[`lib/manager/pip_requirements/extract extractPackageFile() extracts multiple dependencies 1`] = `
Array [
  Object {
    "currentValue": "==1",
    "datasource": "pypi",
    "depName": "Django",
    "lineNumber": 0,
  },
  Object {
    "currentValue": "==0.6.27",
    "datasource": "pypi",
    "depName": "distribute",
    "lineNumber": 1,
  },
  Object {
    "currentValue": "==0.2",
    "datasource": "pypi",
    "depName": "dj-database-url",
    "lineNumber": 2,
  },
  Object {
    "currentValue": "==2.4.5",
    "datasource": "pypi",
    "depName": "psycopg2",
    "lineNumber": 3,
  },
  Object {
    "currentValue": "==0.1.2",
    "datasource": "pypi",
    "depName": "wsgiref",
    "lineNumber": 4,
  },
]
`;

exports[`lib/manager/pip_requirements/extract extractPackageFile() handles comments and commands 1`] = `
Array [
  Object {
    "currentValue": "==1.2.7",
    "datasource": "pypi",
    "depName": "Django",
    "lineNumber": 0,
  },
  Object {
    "currentValue": "==0.6.27",
    "datasource": "pypi",
    "depName": "distribute",
    "lineNumber": 1,
    "skipReason": "ignored",
  },
  Object {
    "currentValue": "==0.2",
    "datasource": "pypi",
    "depName": "dj-database-url",
    "lineNumber": 2,
  },
  Object {
    "currentValue": "==2.4.5",
    "datasource": "pypi",
    "depName": "psycopg2",
    "lineNumber": 3,
  },
  Object {
    "currentValue": "==0.1.2",
    "datasource": "pypi",
    "depName": "wsgiref",
    "lineNumber": 4,
  },
]
`;

exports[`lib/manager/pip_requirements/extract extractPackageFile() handles extras 1`] = `
Array [
  Object {
    "currentValue": "==2.0.8",
    "datasource": "pypi",
    "depName": "Django",
    "lineNumber": 0,
  },
  Object {
    "currentValue": "==4.1.1",
    "datasource": "pypi",
    "depName": "celery",
    "lineNumber": 1,
  },
  Object {
    "currentValue": " == 3.2.1",
    "datasource": "pypi",
    "depName": "foo",
    "lineNumber": 2,
  },
]
`;
